--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html {
     padding: 0;
     height: 100%;
     /* The Font Family- Really important!! */
-    font-family: Arial, sans-serif;
+    font-family: Helvetica, sans-serif;
     box-sizing: border-box;
 }
 
@@ -16,7 +16,7 @@ img {
 
 /* The hero section styling- use your OWN Hero Image URL here */
 .hero {
-    background-image: url('images/techquitybanner-1130x160.png');
+    background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/b/be/Pons_brooks.jpg/1920px-Pons_brooks.jpg');
     height: 25vh;
     background-size: cover;
     background-position: center;
@@ -36,10 +36,10 @@ img {
 
 /* nice big font on a banner style background */
 .topic-title{
-    color: white;
+    color: rgb(255, 254, 254);
     font-size: 2em;
     padding: 0.1em 3em;
-    background-color: rgb(71, 71, 71);
+    background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/b/be/Pons_brooks.jpg/1920px-Pons_brooks.jpg')
 }
 
 /* Three column grid with a nice big gap */
